# tzel

./: .dockerignore  .gitignore  Cargo.toml  README.md  Scarb.toml  audit_followup.md  audit_report.md  bench.sh  findings.md  spec.md
.github/workflows/: proof-roundtrips.yml  release-binaries.yml  render-spec.yml  unit-tests.yml  whitepaper.yml
apps/: README.md
apps/demo/: Cargo.toml
apps/ledger/: Cargo.toml
apps/ledger/src/: main.rs
apps/prover/: Cargo.toml  bench.sh
apps/prover/src/: main.rs
apps/wallet/: Cargo.toml
apps/wallet/src/: lib.rs  main.rs
backends/: README.md
backends/ocaml/: README.md
backends/rust/: Cargo.toml
backends/rust/src/: lib.rs
cairo/src/: blake_hash.cairo  run_shield.cairo  run_transfer.cairo  run_unshield.cairo  shield.cairo  transfer.cairo  unshield.cairo
cli/: Cargo.toml
cli/src/: lib.rs
cli/tests/: integration.rs
core/: Cargo.toml
core/src/: canonical_wire.rs  kernel_wire.rs  lib.rs  operator_api.rs
demo/: Cargo.toml
demo/src/: main.rs
docker/: Dockerfile.binaries
docs/: README.md  index.html  render_spec.py  shadownet_live_shielded_tx_runbook.md  shadownet_tutorial.md  spec.html  spec.template.html  ushuaianet_tutorial.md  wallet_detection_service.md  whitepaper.tex
ocaml/: README.md  dune  dune-project
ocaml/lib/: blake2s_stubs.c  detection.ml  dune  encoding.ml  hash.ml  keys.ml  mlkem.ml  note.ml  transaction.ml  wots.ml
ocaml/protocol/: blake2s.ml  detection.ml  encoding.ml  felt.ml  hash.ml  keys.ml  merkle.ml  mlkem_stubs.c  note.ml  transaction.ml
ocaml/prover/src/: verify.rs
ocaml/services/: ledger.ml  prover.ml
ocaml/services/prover_bridge/: Cargo.toml
ocaml/services/prover_bridge/src/: prove.rs  verify.rs
ocaml/test/: dune  gen_interop_scenario.ml  gen_vectors.ml  test_interop.ml  test_main.ml  test_vectors.ml
ops/prover/: README.md  prover.env.example
ops/shadownet/: README.md  shadownet.env.example
ops/shadownet/systemd/: tzel-operator.service
reprover/: Cargo.toml
reprover/src/: custom_circuit.rs  lib.rs  main.rs
rust/: bench.sh
rust/cli/: Cargo.toml
rust/cli/src/: canonical_wire.rs  lib.rs
rust/cli/tests/: integration.rs
rust/demo/src/: main.rs
rust/protocol/rollup-kernel/: Cargo.toml  README.md
rust/protocol/tzel-core/src/: canonical_wire.rs
rust/protocol/tzel-verifier/: Cargo.toml
rust/reprover/: Cargo.toml
rust/reprover/src/: custom_circuit.rs
rust/services/reprover/: Cargo.toml
rust/services/tzel/: Cargo.toml
rust/services/tzel/src/: canonical_wire.rs  interop_scenario.rs  lib.rs
rust/services/tzel/tests/: cross_impl_interop.rs  integration.rs
rust/src/: shield.cairo
scripts/: cairo_statement_mutation_smoke.sh  install_tzel_binaries.sh  ocaml_unit_tests.sh  octez_rollup_sandbox_dal_smoke.sh  octez_rollup_sandbox_smoke.sh  prover_preflight.sh  shadownet_live_e2e_smoke.sh  shadownet_operator_preflight.sh  unit_coverage.sh
scripts/tests/: test_octez_rollup_sandbox_dal_smoke.py
services/tzel/: Cargo.toml
services/tzel/src/: interop_scenario.rs  lib.rs  proof_bench.rs  protocol_vectors.rs
services/tzel/tests/: cross_impl_interop.rs  integration.rs
specs/: rationale.md  security.md  spec.md
specs/attic/: PLAN_V2.md
specs/ocaml_vectors/: README.md  gen_vectors.rs  protocol_v1.json  protocol_v1_ocaml.json  test_vector_spec.md
specs/test_vectors/: canonical_wire_v1.json  commitment_u64_max_v1.json
src/: blake_hash.cairo  common.cairo  merkle.cairo  shield.cairo  step_join.cairo  step_shield.cairo  step_split.cairo  step_testvec.cairo  step_unshield.cairo  transfer.cairo  unshield.cairo
tezos/: tez_bridge_ticketer.tz
tezos/rollup-kernel/: README.md  build.rs
tezos/rollup-kernel/src/: lib.rs
tezos/rollup-kernel/testdata/: verified_bridge_flow.json
tezos/rollup-kernel/tests/: bridge_flow.rs
verifier/src/: lib.rs
