[package]
name = "tzel-prover"
version = "0.1.0"
edition = "2021"
description = "Prover/verifier CLI bridge for tzel-ocaml, wrapping StarkWare proving-utils v1.2.2"

# ── external prover/verifier stack ──────────────────────────────────────
# Pin to proving-utils v1.2.2 and its exact stwo-cairo / stwo / stwo-circuits
# revisions.  The OCaml side treats this crate as an opaque boundary.

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
starknet-types-core = "=0.2.4"
starknet-ff = "0.3.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
hex = "0.4"

# cairo-vm (same pin as proving-utils v1.2.2)
cairo-vm = { version = "=3.2.0", features = [
    "extensive_hints",
    "mod_builtin",
] }

# proving-utils sub-crates via git at v1.2.2
cairo-program-runner-lib = { git = "https://github.com/starkware-libs/proving-utils", tag = "v1.2.2" }
privacy-prove = { git = "https://github.com/starkware-libs/proving-utils", tag = "v1.2.2" }
privacy-circuit-verify = { git = "https://github.com/starkware-libs/proving-utils", tag = "v1.2.2" }

# stwo-cairo (exact rev used by proving-utils v1.2.2)
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }
stwo-cairo-prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }
stwo-cairo-common = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "467d5c6d" }

# stwo-circuits (exact rev used by proving-utils v1.2.2)
circuit-cairo-air = { git = "https://github.com/starkware-libs/stwo-circuits", rev = "2591775" }
circuits-stark-verifier = { git = "https://github.com/starkware-libs/stwo-circuits", rev = "2591775" }
circuits = { git = "https://github.com/starkware-libs/stwo-circuits", rev = "2591775" }
circuit-serialize = { git = "https://github.com/starkware-libs/stwo-circuits", rev = "2591775" }
circuit-prover = { git = "https://github.com/starkware-libs/stwo-circuits", rev = "2591775" }
circuit-common = { git = "https://github.com/starkware-libs/stwo-circuits", rev = "2591775" }
circuit-air = { git = "https://github.com/starkware-libs/stwo-circuits", rev = "2591775" }

# stwo core (exact rev used by proving-utils v1.2.2)
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "aeceb74c", features = ["parallel", "prover"] }

[[bin]]
name = "tzel-prove"
path = "src/prove.rs"

[[bin]]
name = "tzel-verify"
path = "src/verify.rs"

# Optimize witness generation without full release build
[profile.witness-opt-1]
inherits = "dev"
[profile.witness-opt-1.package.stwo-cairo-prover]
opt-level = 1
[profile.witness-opt-1.package.stwo]
opt-level = 1
[profile.witness-opt-1.package.circuit-prover]
opt-level = 1
[profile.witness-opt-1.package.privacy-prove]
opt-level = 1
